# detection-experiments

./: .gitignore  .gitmodules  README.md  backbone_infer_on_image.py  data_stat.py  eval.py  eval_coco.py  eval_pascal_voc.py  export.py  requirements.txt  run.py  run_on_image.py  run_on_video.py  train.py  train_fcos.py  visualize.py
arch/: bootstrap.py  compound_scaling.py  core_settings.py  default_settings.py  fcos.py  foveabox.py  parse.py  ssd.py
backbone/: feature_hook.py  ghostnet.py  imagenet_1000_classes.py  mobilenetv3.py  rw_mobilenetv3.py  timm.py  tinynet.py  util.py
dataset/: coco.py  loader.py  stat.py  voc.py  widerface.py
detector/: model.py
example/: show_augmentations.py
fpn/: bifpn.py  extension.py
jetson/: README.md  app_config.txt  infer_config.txt
jetson/bbox_parser/: CMakeLists.txt
jetson/bbox_parser/cmake/Modules/: FindDeepStream.cmake  FindTensorRT.cmake
jetson/bbox_parser/src/: CMakeLists.txt  bbox_parser.cpp  bbox_parser.h  interface.cpp
jetson/ssdlite_bbox_parser/: CMakeLists.txt
jetson/ssdlite_bbox_parser/cmake/Modules/: FindDeepStream.cmake
jetson/ssdlite_bbox_parser/src/: CMakeLists.txt  interface.cpp  ssdlite_bbox_parser.cpp  ssdlite_bbox_parser.h
loss/: ciou.py
metric/: coco.py  pascal_voc.py
nn/: conv_tower.py  mish.py  separable_conv_2d.py
predict/: predictor.py
preset/: efv2-s-bifpn-foveabox.json  gn-0.25-bifpn-fcos.json  gn-0.25-bifpn-foveabox.json  gn-0.50-bifpn-fcos.json  gn-0.50-bifpn-foveabox.json  gn-0.75-bifpn-fcos.json  gn-0.75-bifpn-foveabox.json  gn-1.0-bifpn-fcos.json  gn-1.0-ssd-lite.json  (+18 more)
(+47 files in other folders)
